# bossman

./: Cargo.toml  LICENSE.md  README.md  build.rs
bossman/: Cargo.toml  build.rs  builder
bossman/protos/: bossman.proto  bossman.protobuf.v1alpha1.rs
bossman/protos/bossman.protobuf.v1alpha1/: options.proto
bossman/src/: bossman.rs  consts.rs  db.rs  k8s.rs  main.rs
bossman/src/consts/: labels.rs
bossman/src/k8s/: kube_job.rs
bossman/src/protos/: bossman.proto
bossman_server/: Cargo.toml  builder
bossman_server/protos/: bossman.proto
bossman_server/protos/bossman.protobuf.v1alpha1/: options.proto  status.proto
bossman_server/src/: error.rs  k8s.rs  main.rs
src/protos/: job.proto
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
workers/elixir/: .gitignore  README.md  mix.exs
workers/elixir/lib/: bossman.ex  bossman_worker.ex  job.ex  util.ex
workers/elixir/lib/job/: client.ex  decode.ex  error.ex  options.ex  status.ex
workers/elixir/lib/job/options/: decode.ex  encode.ex
workers/elixir/lib/protos/: bossman.pb.ex
workers/elixir/lib/protos/bossman.protobuf.v1alpha1/: options.pb.ex
workers/elixir/lib/src/protos/: bossman.pb.ex
workers/elixir/test/: bossman_worker_test.exs  protobuf_test.exs
workers/elixir/test/job/: options_test.exs
workers/src/protos/: bossman.pb.ex
