[package]
name = "bossman"
version = "0.1.0"
authors = ["Praveen Perera <ppraveen25@gmail.com>"]
edition = "2018"

[dependencies]
# grpc
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

# utils
uuid = { version = "0.8", features = ["v4"] }

# error handling
thiserror = "1.0"

# redis 
redis = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
tonic-build = "0.3"
prost-build = "0.6" 
prost-types = "0.6"
