[package]
name = "bossman_server"
version = "0.1.0"
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"

[dependencies]
# grpc
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

# utils
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"

# error handling
thiserror = "1.0"

# redis 
redis = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# async
futures = "0.3"

# kubernetes
kube = "0.40.0"
kube-runtime = "0.40.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }

[build-dependencies]
tonic-build = "0.3"
prost-build = "0.6" 
prost-types = "0.6"
